[project]
name = "ha-holfuy"
version = "0.1"
license = "MIT"
license-files = ["LICENSE*"]

description = "Home Assistant Holfy weater station integration."
authors = [
    { name = "Håvard Dagenborg", email = "haavardj@dagenborg.net" },
]
readme = "README.md"
requires-python = ">=3.13.0"
dependencies = ["homeassistant>=2025.3.2", "pyholfuy>=0.1"]

[dependency-groups]
dev = ["homeassistant-stubs>=2025.3.2", "ruff ~=0.11.7", "pyright ~=1.1.400"]

[tool.pyright]
reportIncompatibleVariableOverride = "none"
venvPath = "."
venv = ".venv"
